Fix .fr, minimal response & detailss=1, auth
